[package]
name = "hnt-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "*"
axum = { version = "0", features = ["query"] }
base64 = "0"
bs58 = "0"
chrono = "0"
csv = "*"
clap = { version = "4", features = ["derive"]}
futures = "0"
helium-crypto = {version = "0.6.3", features = ["solana"] }
#helium-anchor-gen = { git = "https://github.com/lthiery/helium-anchor-gen.git" }
helium-anchor-gen = { path = "../helium-anchor-gen" }
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "json"]}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
json = "*"
lazy_static = "1"
rand = "0.8"
serde_bytes = "0"
solana-account-decoder = "1"
solana-sdk = "1.14.10"
solana-program = "1.14.10"
spl-associated-token-account = { version = "*", git = "https://github.com/ChewingGlass/solana-program-library", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "*", git = "https://github.com/ChewingGlass/solana-program-library" }
tokio ={ version = "1", features = ["fs", "macros"] }
thiserror = "1"
helium-api = "3"
mime_guess = "2"
rust_decimal = { version = "1" }
