[package]
name = "hnt-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "*"
axum = { version = "0.7", features = ["query"] }
axum-server = { version = "0" }
base64 = ">=0.20"
bs58 = "0"
chrono = "0"
csv = "*"
clap = { version = "4", features = ["derive"]}
futures = "0"
helium-crypto = {version = "0.6.3", features = ["solana"] }
helium-anchor-gen = { git = "https://github.com/lthiery/helium-anchor-gen.git" }
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "json"]}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
json = "*"
lazy_static = "1"
rand = "0.8"
serde_bytes = "0"
spl-associated-token-account = { version = "2", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1" }
tokio ={ version = "1", features = ["fs", "macros", "rt-multi-thread"] }
thiserror = "1"
helium-api = "3"
mime_guess = "2"
rust_decimal = { version = "1" }
